--- a/addprod.html
+++ b/addprod.html
@@ -70,7 +70,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="admin/addprod">
+                                <a class="nav-link" href="addprod">
                                     <span data-feather="file" class="align-text-bottom"></span>
                                     Gestion de produit
                                 </a>
