--- a/connection.html
+++ b/connection.html
@@ -19,7 +19,7 @@
   <div id="header" class="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Sport+</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
 
   <div class="container mt-5">
     <div class="row">
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center login_img">
         <img class="mb-4" src="./sources/upload/angry.png" alt="" width="72px" />
       </div>
 
