--- a/productpage.html
+++ b/productpage.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
-    <link href="./sources/css/style.css" rel="stylesheet"/>
+    <link href="./sources/css/style.css" rel="stylesheet" />
     <script src="./sources/js/script.js"></script>
 </head>
 
@@ -38,15 +38,21 @@
     </div>
 
     <div class=" d-flex justify-content-center content mt-5">
-        <div class="row ">
-            <div class="col-8">
+        <div class="row d-flex justify-content-center">
+            <div class="col-4 d-flex justify-content-center">
                 <img class="product_image" src="/sources/upload/angry.png" alt="">
             </div>
             <div class="col-4">
                 <div class="row pt-5">
-                    <div class="col-12">Titre du produit</div>
-                    <div class="col-12">Description</div>
-                    <div class="col-12">Price</div>
+                    <div class="col-12 mb-2"><h3>Titre du produit</h3></div>
+                    <div class="col-12 mb-2">
+                        <p>Cras fermentum in ligula ut venenatis. Mauris at aliquam leo. Sed fringilla venenatis
+                            pulvinar. Nam scelerisque non elit id lacinia. Curabitur dui libero, egestas eget enim ut,
+                            faucibus tempus erat. In quis feugiat arcu. Aliquam erat volutpat. Maecenas laoreet mauris
+                            turpis.
+                        </p>
+                    </div>
+                    <div class="col-12"><h5>Price €</h5> </div>
                 </div>
             </div>
         </div>
