--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
     </nav>
 </div>
 <div class="content" >
-        je suis content
+       <div class="container">
+            <div class="row">
+                <div class="col-12 mt-3"></div>
+                <h2>Nom du shop</h2>
+                <hr class="mb-4 mt-0 d-inline-block mx-auto shop_name" />
+                <section>
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="./sources/upload/angry.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </section>
+            </div>
+       </div>
 </div>
 <div class="my-5">
 
