--- a/connection.html
+++ b/connection.html
@@ -29,7 +29,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             
             <a class="nav-link" href="inscription">inscription</a>
-            <a class="nav-link" href="admin">admin</a>
+            <a class="nav-link" href="admin">Gestion</a>
           </div>
         </div>
       </div>
@@ -53,8 +53,9 @@
         </div>
       </div>
       <button onclick="login()" class=" w-100 btn btn-primary btn-lg mt-3" id="loginButton">Connection</button>
+      <label class="mt-1"> <a href="inscription">Vous souhaitez vous inscrire?</a></label>
     </div>
-  </div>
+  </div>  
 
 
   <!-- FOOTER -->
