--- a/inscription.html
+++ b/inscription.html
@@ -21,13 +21,13 @@
       <a class="navbar-brand" href="#">Sport+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button>      
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           
           <a class="nav-link" href="inscription">inscription</a>
-          <a class="nav-link" href="admin">admin</a>
+          <a class="nav-link" href="admin">Gestion</a>
         </div>
       </div>
     </div>
@@ -74,6 +74,7 @@
       <button onclick="signup()" id="signupButton" class="w-100 btn btn-primary btn-lg mt-3">
         Inscription
       </button>
+      <label class="mt-1"> <a href="connection">Avez-vous un compte?</a></label>
     <!-- </form> -->
   </div>
 </div>
