--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="inscription">inscription</a>
-                    <a class="nav-link" href="admin">admin</a>
+                    <a class="nav-link" href="connection">Login</a>
+                    <a class="nav-link" href="admin">Gestion</a>
                 </div>
             </div>
         </div>
