--- a/productpage.html
+++ b/productpage.html
@@ -29,7 +29,7 @@
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                         <a class="nav-link" href="inscription">inscription</a>
-                        <a class="nav-link" href="admin">admin</a>
+                        <a class="nav-link" href="admin">Gestion</a>
                     </div>
                 </div>
             </div>
