--- a/admin.html
+++ b/admin.html
@@ -81,7 +81,15 @@
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">                
                 <div class="content mt-5 container">
-                    je suis content
+                    <div class="container">
+                        <p>Félicitation vous êtes désormais un membre de notre site. <br>
+                            Afin de profitez des droits admin de création de produits veuillez utiliser le compte suivant lors de votre connexion :
+                        </p>
+                        <ul>
+                            <li>Identifiant : admin@sportplus.com</li>
+                            <li>Mot de passe : admin</li>
+                        </ul>
+                    </div>
                 </div>
             </main>
         </div>
