--- a/admin.html
+++ b/admin.html
@@ -25,7 +25,7 @@
         </button>
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
-                <a class="nav-link px-3" href="logout">Sign out</a>
+                <a class="logout_btn nav-link px-3" href="logout">Deconnexion</a>
             </div>
         </div>
     </header>
@@ -73,6 +73,13 @@
                             <a class="nav-link" href="addprod">
                                 <span data-feather="file" class="align-text-bottom"></span>
                                 Gestion de produit
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="logout_menu">
+                        <li class="nav-item">
+                            <a href="logout" class="nav-link">
+                                Deconnexion
                             </a>
                         </li>
                     </ul>
