--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
 
 <body >
 <div class="content">
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+<header class="navbar admin_nav navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="index">Sport +</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
@@ -76,7 +76,7 @@
                             </a>
                         </li>
                     </ul>
-                    <ul class="logout_menu">
+                    <ul class="logout_menu nav flex-column">
                         <li class="nav-item">
                             <a href="logout" class="nav-link">
                                 Deconnexion
