--- a/addprod.html
+++ b/addprod.html
@@ -17,9 +17,9 @@
 
 <body>
     <div class="content">
-        <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <header class="navbar admin_nav navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
             <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="index">Sport +</a>
-            <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler navbaradmin position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,13 +48,7 @@
                                     <span data-feather="file-text" class="align-text-bottom"></span>
                                     Mon compte
                                 </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    <span data-feather="file-text" class="align-text-bottom"></span>
-                                    Mot de passe
-                                </a>
-                            </li>
+                            </li>                            
                         </ul>
                         <h6
                             class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
