--- a/account.html
+++ b/account.html
@@ -75,7 +75,19 @@
                 </nav>
 
                 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                    
+                    <div class="row">
+                        <h3>Information du compte</h3>
+                        <div class="col-6">
+                            <span>Email:</span>
+                            <span>Username:</span>
+                            <span>Password:</span>
+                        </div>
+                        <div class="col-6">
+                            <span>Email:</span>
+                            <span>Username:</span>
+                            <span>Password:</span>
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
