--- a/account.html
+++ b/account.html
@@ -75,17 +75,60 @@
                 </nav>
 
                 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                    <div class="row">
+                    <div class="row account_gestion_lg">
                         <h3>Information du compte</h3>
                         <div class="col-6">
-                            <span>Email:</span>
-                            <span>Username:</span>
-                            <span>Password:</span>
+                            <div class="row g-3">
+                                <div class="col-12">
+                                  <div class="input-group has-validation">
+                                    <span class="input-group-text">@</span>
+                                    <span>username:</span>
+                                  </div>
+                                </div>
+                                <div class="col-12">
+                                    <span>email:</span>
+                                </div>
+                                <div class="col-12">
+                                  <span>password</span>
+                                </div>
+                              </div>
                         </div>
                         <div class="col-6">
-                            <span>Email:</span>
-                            <span>Username:</span>
-                            <span>Password:</span>
+                            <div class="row g-3">
+                                <div class="col-12">
+                                  <div class="input-group has-validation">
+                                    <span class="input-group-text">@</span>
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      id="signupUsername"
+                                      placeholder="Username actuel"
+                                      required
+                                    />
+                                  </div>
+                                </div>
+                                <div class="col-12">
+                                  <input
+                                    type="email"
+                                    class="form-control"
+                                    id="signupEmail"
+                                    placeholder="email actuel"
+                                    required
+                                  />
+                                </div>
+                                <div class="col-12">
+                                  <input
+                                    type="password"
+                                    class="form-control"
+                                    id="signupPassword"
+                                    placeholder="Password"
+                                    required
+                                  />
+                                </div>
+                                <button onclick="" id="" class="w-100 btn btn-primary btn-lg mt-3">
+                                    Modifier
+                                  </button>
+                              </div>
                         </div>
                     </div>
                 </main>
