--- a/account.html
+++ b/account.html
@@ -74,7 +74,8 @@
                     </div>
                 </nav>
 
-                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">                   
+                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                    <h3>information du compte</h3>                   
                     <div class="row g-3 account_gestion_mb">
                             <div class="col-12">
                                 <div class="input-group has-validation">
@@ -107,6 +108,9 @@
                                     required
                                   />
                             </div>
+                            <button onclick="signup()" id="signupButton" class="w-100 btn btn-primary btn-lg mt-3">
+                                Modifier informations
+                              </button>
                     </div>
                 </main>
             </div>
