--- a/account.html
+++ b/account.html
@@ -108,7 +108,7 @@
                                     required
                                   />
                             </div>
-                            <button onclick="signup()" id="signupButton" class="w-100 btn btn-primary btn-lg mt-3">
+                            <button onclick="" id="" class="w-100 btn btn-primary btn-lg mt-3">
                                 Modifier informations
                               </button>
                     </div>
