--- a/account.html
+++ b/account.html
@@ -76,7 +76,7 @@
 
                 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                     <h3>information du compte</h3>                   
-                    <div class="row g-3 account_gestion_mb">
+                    <div class="row g-3 account_gestion_mb mt-5">
                             <div class="col-12">
                                 <div class="input-group has-validation">
                                     <span class="input-group-text">@</span>
@@ -98,8 +98,7 @@
                                     required
                                   />
                             </div>
-                            <div class="col-12">
-                                <span>password</span>
+                            <div class="col-12">                                
                                 <input
                                     type="password"
                                     class="form-control"
