--- a/account.html
+++ b/account.html
@@ -26,7 +26,7 @@
             </button>
             <div class="navbar-nav">
                 <div class="nav-item text-nowrap">
-                    <a class="nav-link px-3" href="logout">Sign out</a>
+                    <a class="logout_btn nav-link px-3" href="logout">Deconnexion</a>
                 </div>
             </div>
         </header>
