--- a/account.html
+++ b/account.html
@@ -76,7 +76,7 @@
 
                 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                     <h3>information du compte</h3>                   
-                    <div class="row g-3 account_gestion_mb mt-5">
+                    <div class="row g-3 account_gestion_mb">
                             <div class="col-12">
                                 <div class="input-group has-validation">
                                     <span class="input-group-text">@</span>
