--- a/account.html
+++ b/account.html
@@ -44,11 +44,11 @@
                         </h6>
                         <ul class="nav flex-column mb-2">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="account">
                                     <span data-feather="file-text" class="align-text-bottom"></span>
                                     Mon compte
                                 </a>
-                            </li>                            
+                            </li>                        
                         </ul>
                         <h6
                             class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
@@ -71,11 +71,18 @@
                                 </a>
                             </li>
                         </ul>
+                        <ul class="logout_menu nav flex-column">
+                            <li class="nav-item">
+                                <a href="logout" class="nav-link">
+                                    Deconnexion
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </nav>
 
                 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                    <h3>information du compte</h3>                   
+                    <h3 class="mt-2">information du compte</h3>                   
                     <div class="row g-3 account_gestion_mb">
                             <div class="col-12">
                                 <div class="input-group has-validation">
