--- a/addprod.html
+++ b/addprod.html
@@ -48,7 +48,7 @@
                                     <span data-feather="file-text" class="align-text-bottom"></span>
                                     Mon compte
                                 </a>
-                            </li>                            
+                            </li>                        
                         </ul>
                         <h6
                             class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
@@ -68,6 +68,13 @@
                                 <a class="nav-link" href="addprod">
                                     <span data-feather="file" class="align-text-bottom"></span>
                                     Gestion de produit
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="logout_menu nav flex-column">
+                            <li class="nav-item">
+                                <a href="logout" class="nav-link">
+                                    Deconnexion
                                 </a>
                             </li>
                         </ul>
