--- a/admin.html
+++ b/admin.html
@@ -96,7 +96,7 @@
         </div>
     </div>
 </div>
-<div class="my-5">
+<div class="">
 
 
     <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
