--- a/productpage.html
+++ b/productpage.html
@@ -41,8 +41,7 @@
         </div>
     </div>
 
-    <div class="my-5">
-
+    <div class="">
 
         <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
 
