--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 <div class="content" >
        <div id="container" class="container"></div>
 </div>
-<div class="my-5">
-
+<div class="">
 
     <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
 
