--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
 
                 <div class="">
-                    <span>Get connected with us on social networks : <a class="text-white"
+                    <span>Get connected with us on social networks : <a class="text-white text-decoration-none"
                             href="https://twitterplus.alwaysdata.net">Twitter+</a></span>
                 </div>
 
