--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
 
-            <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
+            <section class="d-flex justify-content-between p-4" style="background-color: #39394e">
 
                 <div class="">
                     <span>Get connected with us on social networks : <a class="text-white text-decoration-none"
@@ -129,7 +129,7 @@
 
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
                 © 2023 Copyright:
-                <a class="text-white" href="index">Sport+</a>
+                <a class="text-white text-decoration-none" href="index">Sport+</a>
             </div>
 
         </footer>
