--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <section class="d-flex justify-content-between p-4" style="background-color: #39394e">
 
                 <div class="">
-                    <span>Get connected with us on social networks : <a class="text-white text-decoration-none"
+                    <span>Get connected with us on social networks : <a class="text-white"
                             href="https://twitterplus.alwaysdata.net">Twitter+</a></span>
                 </div>
 
@@ -129,7 +129,7 @@
 
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
                 © 2023 Copyright:
-                <a class="text-white text-decoration-none" href="index">Sport+</a>
+                <a class="text-secondary" href="index">Sport+</a>
             </div>
 
         </footer>
