--- a/admin.html
+++ b/admin.html
@@ -101,10 +101,11 @@
 
     <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
 
-        <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
+        <section class="d-flex justify-content-between p-4" style="background-color: #39394e">
 
-            <div class="me-5">
-                <span>Get connected with us on social networks : Twitter+ </span>
+            <div class="">
+                <span>Get connected with us on social networks : <a class="text-secondary"
+                        href="https://twitterplus.alwaysdata.net">Twitter+</a></span>
             </div>
 
             <div>
@@ -142,7 +143,7 @@
                         <p>
                             Une entreprise qui entreprend.
                         </p>
-                    </div>  
+                    </div>
 
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
@@ -187,7 +188,7 @@
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
             © 2023 Copyright:
-            <a class="text-white" href="#">Sport+.fr</a>
+            <a class="text-secondary" href="index">Sport+</a>
         </div>
 
     </footer>
