--- a/account.html
+++ b/account.html
@@ -125,10 +125,11 @@
     <div class="">
         <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
 
-            <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
+            <section class="d-flex justify-content-between p-4" style="background-color: #39394e">
 
-                <div class="me-5">
-                    <span>Get connected with us on social networks : Twitter+ </span>
+                <div class="">
+                    <span>Get connected with us on social networks : <a class="text-secondary"
+                            href="https://twitterplus.alwaysdata.net">Twitter+</a></span>
                 </div>
 
                 <div>
@@ -153,6 +154,7 @@
                 </div>
 
             </section>
+
             <section class="">
                 <div class="container text-center text-md-start mt-5">
 
@@ -205,10 +207,14 @@
 
                 </div>
             </section>
+
+
+
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
                 © 2023 Copyright:
-                <a class="text-white" href="#">Sport+.fr</a>
+                <a class="text-secondary" href="index">Sport+</a>
             </div>
+
         </footer>
     </div>
 </body>
