--- a/inscription.html
+++ b/inscription.html
@@ -81,91 +81,97 @@
 </div>
 <div class="">  <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
 
-      <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
+  <section class="d-flex justify-content-between p-4" style="background-color: #39394e">
 
-          <div class="me-5">
-              <span>Get connected with us on social networks : Twitter+ </span>
-          </div>
+      <div class="">
+          <span>Get connected with us on social networks : <a class="text-secondary"
+                  href="https://twitterplus.alwaysdata.net">Twitter+</a></span>
+      </div>
 
-          <div>
-              <a href="" class="text-white me-4">
-                  <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                  <i class="fab fa-twitter"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                  <i class="fab fa-google"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                  <i class="fab fa-instagram"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                  <i class="fab fa-linkedin"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                  <i class="fab fa-github"></i>
-              </a>
-          </div>
+      <div>
+          <a href="" class="text-white me-4">
+              <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="" class="text-white me-4">
+              <i class="fab fa-twitter"></i>
+          </a>
+          <a href="" class="text-white me-4">
+              <i class="fab fa-google"></i>
+          </a>
+          <a href="" class="text-white me-4">
+              <i class="fab fa-instagram"></i>
+          </a>
+          <a href="" class="text-white me-4">
+              <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="" class="text-white me-4">
+              <i class="fab fa-github"></i>
+          </a>
+      </div>
 
-      </section>
-      <section class="">
-          <div class="container text-center text-md-start mt-5">
+  </section>
 
-              <div class="row mt-3">
+  <section class="">
+      <div class="container text-center text-md-start mt-5">
 
-                  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                      <!-- Content -->
-                      <h6 class="text-uppercase fw-bold">Sport +</h6>
-                      <hr class="mb-4 mt-0 d-inline-block mx-auto social_description" />
-                      <p>
-                          Une entreprise qui entreprend.
-                      </p>
-                  </div>
+          <div class="row mt-3">
 
-                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                      <!-- Links -->
-                      <h6 class="text-uppercase fw-bold">Products</h6>
-                      <hr class="mb-4 mt-0 d-inline-block mx-auto social_background" />
-                      <p>
-                          <a href="#!" class="text-white">lorem ipsum</a>
-                      </p>
-                      <p>
-                          <a href="#!" class="text-white">lorem ipsum</a>
-                      </p>
-                  </div>
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                  <!-- Content -->
+                  <h6 class="text-uppercase fw-bold">Sport +</h6>
+                  <hr class="mb-4 mt-0 d-inline-block mx-auto social_description" />
+                  <p>
+                      Une entreprise qui entreprend.
+                  </p>
+              </div>
 
-                  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                  <!-- Links -->
+                  <h6 class="text-uppercase fw-bold">Products</h6>
+                  <hr class="mb-4 mt-0 d-inline-block mx-auto social_background" />
+                  <p>
+                      <a href="#!" class="text-white">lorem ipsum</a>
+                  </p>
+                  <p>
+                      <a href="#!" class="text-white">lorem ipsum</a>
+                  </p>
+              </div>
 
-                      <h6 class="text-uppercase fw-bold">Useful links</h6>
-                      <hr class="mb-4 mt-0 d-inline-block mx-auto social_account" />
-                      <p>
-                          <a href="#!" class="text-white">Your Account</a>
-                      </p>
-                      <p>
-                          <a href="#!" class="text-white">Become an Affiliate</a>
-                      </p>
-                  </div>
+              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
-                  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                  <h6 class="text-uppercase fw-bold">Useful links</h6>
+                  <hr class="mb-4 mt-0 d-inline-block mx-auto social_account" />
+                  <p>
+                      <a href="#!" class="text-white">Your Account</a>
+                  </p>
+                  <p>
+                      <a href="#!" class="text-white">Become an Affiliate</a>
+                  </p>
+              </div>
 
-                      <h6 class="text-uppercase fw-bold">Contact</h6>
-                      <hr class="mb-4 mt-0 d-inline-block mx-auto social_contact" />
-                      <p><i class="fas fa-home mr-3"></i> France</p>
-                      <p><i class="fas fa-envelope mr-3"></i> sport+@example.com</p>
-                      <p><i class="fas fa-phone mr-3"></i> + 00 00 00 00</p>
-                      <p><i class="fas fa-print mr-3"></i> + 00 00 00 00</p>
-                  </div>
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 
+                  <h6 class="text-uppercase fw-bold">Contact</h6>
+                  <hr class="mb-4 mt-0 d-inline-block mx-auto social_contact" />
+                  <p><i class="fas fa-home mr-3"></i> France</p>
+                  <p><i class="fas fa-envelope mr-3"></i> sport+@example.com</p>
+                  <p><i class="fas fa-phone mr-3"></i> + 00 00 00 00</p>
+                  <p><i class="fas fa-print mr-3"></i> + 00 00 00 00</p>
               </div>
 
           </div>
-      </section>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-          © 2023 Copyright:
-          <a class="text-white" href="#">Sport+.fr</a>
+
       </div>
-  </footer>
+  </section>
+
+
+
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2023 Copyright:
+      <a class="text-secondary" href="index">Sport+</a>
+  </div>
+
+</footer>
 </div>
 </body>
 </html>
